[main-private] DiscoveryExecutor updated by replacing the preview feature with an ExecutorService